Add: Liked Page API and Player improventions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@fluentui/svg-icons": "^1.1.198",
-    "@fluentui/web-components": "^2.5.14"
+    "@fluentui/web-components": "^2.5.14",
+    "idb-keyval": "^6.2.1"
   }
 }
