--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,16 @@
 {
+    "manifest_version": 3,
     "name": "DeskTube",
     "version": "1.0.0",
     "description": "DeskTube",
-    "manifest_version": 3,
+    "icons": {
+    	"16":"assets/16.png",
+    	"32":"assets/32.png",
+    	"128":"assets/128.png",
+    	"144":"assets/144.png",
+       	"192":"assets/192.png",
+    	"512":"assets/512.png"
+    }
     "author": "malisipi",
     "action": {
         "default_popup": "index.html",
